--- a/WebContent/style/css/style.css
+++ b/WebContent/style/css/style.css
@@ -1,9 +1,3 @@
-
-
-
-
-
-
 <style>
 
 table{
@@ -21,8 +15,8 @@ th {
 }
 td{
 	border: 1px solid #4CAF50;
-	background-color: #ff00ff;
-	color: white;
+	background-color: #ffffff;
+	color: black;
 }
 
 </style>
